# GModCEFCodecFix

./: .gitattributes  .gitignore  Cargo.toml  GModCEFCodecFix.py  GModCEFCodecFixIcon.icns  GModCEFCodecFixIcon.xcf  GModPatchToolLogo.icns  GenCEFCodecFix.py  GetFileSHA256.py  README.md  build.rs  detection_example.lua  gen-requirements.txt  internal-version.txt  macos_terminal_launcher  manifest.json  pyinstaller.txt  pyinstaller_linux.txt  pyinstaller_macos.txt  pyinstaller_windows.txt  requirements.txt  rustfmt.toml  version.txt
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
cef_build/: README.md  darwin.sh  linux.sh  windows.bat
darwin/x86-64-temp/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework.bsdiff
darwin/x86-64-temp/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries/: libEGL.dylib.bsdiff  libGLESv2.dylib.bsdiff  libvk_swiftshader.dylib.bsdiff
darwin/x86-64-temp/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/Resources/: Info.plist.bsdiff  chrome_100_percent.pak.bsdiff  chrome_200_percent.pak.bsdiff  icudtl.dat.bsdiff  snapshot_blob.bin.bsdiff  v8_context_snapshot.x86_64.bin.bsdiff
darwin/x86-64-temp/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper (Renderer).app/Contents/: Info.plist.bsdiff
darwin/x86-64-temp/GarrysMod_Signed.app/Contents/MacOS/: html_chromium.dylib.bsdiff
darwin/x86-64-temp/garrysmod/html/js/menu/: control.Menu.js.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries/: libEGL.dylib.bsdiff  libGLESv2.dylib.bsdiff  libswiftshader_libEGL.dylib.bsdiff  libswiftshader_libGLESv2.dylib.bsdiff  libvk_swiftshader.dylib.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/Resources/: Info.plist.bsdiff  cef.pak.bsdiff  cef_100_percent.pak.bsdiff  cef_200_percent.pak.bsdiff  cef_extensions.pak.bsdiff  chrome_100_percent.pak.bsdiff  chrome_200_percent.pak.bsdiff  devtools_resources.pak.bsdiff  gpu_shader_cache.bin.bsdiff  icudtl.dat.bsdiff  resources.pak.bsdiff  snapshot_blob.bin.bsdiff  v8_context_snapshot.bin.bsdiff  v8_context_snapshot.x86_64.bin.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper (Alerts).app/Contents/: Info.plist.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper (GPU).app/Contents/: Info.plist.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper (Plugin).app/Contents/: Info.plist.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper (Renderer).app/Contents/: Info.plist.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/Frameworks/gmod Helper.app/Contents/: Info.plist.bsdiff
darwin/x86-64/GarrysMod_Signed.app/Contents/MacOS/: gmod.bsdiff  html_chromium.dylib.bsdiff
darwin/x86-64/garrysmod/html/js/menu/: control.Menu.js.bsdiff
darwin/x86-64/garrysmod/lua/menu/: mainmenu.lua.bsdiff
docs/macOS/: appgen.txt
docs/macOS/scripts/: appify.sh  launcher.sh
examples/: detection_example.lua
linux/x86-64/garrysmod/lua/menu/: mainmenu.lua.bsdiff
originals/: gmod-update.txt
originals/linux/x86-64/: hl2.sh.zst
originals/linux/x86-64/garrysmod/html/css/menu/: Menu.css.zst
originals/macos/x86-64/: hl2_osx.zst
originals/macos/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework  Chromium Embedded Framework.zst
originals/macos/x86-64/GarrysMod_Signed.app/Contents/MacOS/: html_chromium.dylib  html_chromium.dylib.zst
originals/macos/x86-64/garrysmod/html/: menu.html.zst
originals/macos/x86-64/garrysmod/resource/: ClientScheme.res.zst  SourceScheme.res.zst
originals/windows/public/: gmod.exe.zst
originals/windows/public/garrysmod/html/: menu.html.zst
originals/windows/public/garrysmod/html/css/menu/: NewGame.css.zst
originals/windows/public/garrysmod/html/js/menu/: control.Menu.js.zst
originals/windows/public/garrysmod/lua/menu/: mainmenu.lua.zst
patches/linux/x86-64/: hl2.sh.bsdiff
patches/linux/x86-64/garrysmod/html/: menu.html.bsdiff
patches/linux/x86-64/garrysmod/lua/menu/: mainmenu.lua.bsdiff
patches/linux/x86-64/garrysmod/resource/: SourceScheme.res.bsdiff
patches/macos/x86-64/: hl2_osx.bsdiff
patches/macos/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework.bsdiff
patches/macos/x86-64/GarrysMod_Signed.app/Contents/MacOS/: gmod.bsdiff  html_chromium.dylib.bsdiff
patches/macos/x86-64/garrysmod/html/: menu.html.bsdiff
patches/macos/x86-64/garrysmod/html/css/menu/: NewGame.css.bsdiff
patches/macos/x86-64/garrysmod/html/js/menu/: control.Menu.js.bsdiff
patches/macos/x86-64/garrysmod/lua/menu/: mainmenu.lua.bsdiff
patches/macos/x86-64/garrysmod/resource/: ClientScheme.res.bsdiff  SourceScheme.res.bsdiff
patches/windows/public/: gmod.exe.bsdiff
patches/windows/public/garrysmod/html/: menu.html.bsdiff
patches/windows/public/garrysmod/html/js/menu/: control.Menu.js.bsdiff
patches/windows/public/garrysmod/lua/menu/: mainmenu.lua.bsdiff
patches/windows/public/garrysmod/resource/: ClientScheme.res.bsdiff
patches/windows/public/garrysmod/resource/fonts/: PTMono-OFL.txt.bsdiff
patches/windows/x86-64/garrysmod/html/css/menu/: Menu.css.bsdiff
patches/windows/x86-64/garrysmod/resource/fonts/: PTMono-Regular.ttf.bsdiff
src/: generate.rs  gui.rs  lib.rs  main.rs  patch.rs  vdf.rs
src/patch/: gui.rs
symbols/macos/x86-64/GarrysMod_Signed.app/Contents/Frameworks/Chromium Embedded Framework.framework/: Chromium Embedded Framework.sym.zst
symbols/macos/x86-64/GarrysMod_Signed.app/Contents/MacOS/: gmod.sym.zst  html_chromium.dylib.sym.zst
win32/x86-64/garrysmod/lua/menu/: mainmenu.lua.bsdiff
(+335 files in other folders)
