[package]
name = "gmodpatchtool"
version = "20250412.0.0"
authors = ["Solstice Game Studios <contact@solsticegamestudios.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
qbsdiff = "1.4.3"
blake3 = { version = "1.8.2", features = ["mmap", "rayon"] }
rayon = { version = "1.10.0" }
serde_json = { version = "1.0.140" }
dirs = { version = "6.0.0", optional = true }
eframe = { version = "0.31.1", optional = true }
keyvalues-parser = { version = "0.2.0", optional = true }
phf = { version = "0.11.3", features = ["macros"], optional = true }
reqwest = { version = "0.12.20", default-features = false, features = ["http2", "rustls-tls-native-roots", "json", "gzip", "brotli", "zstd", "socks"], optional = true }
steamid = { version = "0.1.2", git = "https://github.com/JohnPeel/steamid", optional = true }
sysinfo = { version = "0.35.2", optional = true }
thiserror = { version = "2.0.12", optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"], optional = true }
windows-registry = { version = "0.5.2", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.22"

[features]
default = ["patch"]
#default = ["generate"]
patch = ["dep:dirs", "dep:eframe", "dep:keyvalues-parser", "dep:phf", "dep:reqwest", "dep:steamid", "dep:sysinfo", "dep:thiserror", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:windows-registry"]
generate = []
