[package]
name = "gmodpatchtool"
version = "20250629.0.0"
authors = ["Solstice Game Studios <contact@solsticegamestudios.com>"]
license = "GPL-3.0-only"
edition = "2021"

[package.metadata.winresource]
FileDescription = "GModPatchTool"
ProductName = "GModPatchTool"
LegalCopyright = "Solstice Game Studios <contact@solsticegamestudios.com>"

[dependencies]
anyhow = { version = "*" }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0" }
qbsdiff = "1.4"
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
rayon = { version = "1.10" }
serde_json = { version = "1.0" }
dirs = { version = "6.0", optional = true }
iced = { version = "0.13.1", optional = true, features = ["image"] }
iced_term = { version = "0.5.1", optional = true }
keyvalues-parser = { version = "0.2", optional = true }
phf = { version = "0.12", features = ["macros"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls-native-roots", "json", "gzip", "brotli", "zstd", "socks"], optional = true }
steamid = { version = "0.1", git = "https://github.com/JohnPeel/steamid", optional = true }
sysinfo = { version = "0.35", optional = true }
thiserror = { version = "2.0", optional = true }
tokio = { version = "1.45", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"], optional = true }
windows-registry = { version = "0.5", optional = true }
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
dunce = "1.0"
win32console = "0.1.5"

[features]
default = ["patch"]
#default = ["generate"]
patch = ["dep:dirs", "dep:iced", "dep:iced_term", "dep:keyvalues-parser", "dep:phf", "dep:reqwest", "dep:steamid", "dep:sysinfo", "dep:thiserror", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:windows-registry"]
generate = []

# Build config
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cargo-packager = "0.11"

[patch.crates-io]
iced_term = { git = "https://github.com/Harzu/iced_term", rev = "a93fcbd59fbee3d2e781470a6024ce935068dd31" }

[package.metadata.packager]
product-name = "GModPatchTool"
identifier = "com.solsticegamestudios.gmodpatchtool"
license-file = "LICENSE.txt"
before-packaging-command = "cargo build --release"
binaries = [
	{ path = "gmodpatchtool", main = true }
]
formats = ["dmg"]
resources = ["GModPatchToolLogo.icns"]
icons = ["GModPatchToolLogo.icns"]
macos = { minimum-system-version = "11.0" }
#dmg = { background = "macos-background.png", window-size = "640 360", app-position = "", app-folder-position = "" }
